--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # production
 /build
 
+
+# security perpose
+
+.firebase.js
+
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +27,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
