--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "firebase": "^9.0.2",
     "font-awesome": "^4.7.0",
     "har-validator": "^5.1.5",
+    "history": "^5.3.0",
     "mongodb": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router": "^6.13.0",
     "react-router-dom": "^6.10.0",
     "react-stars": "^2.2.5",
     "sass": "^1.58.3",
